SFUSA/force-app/main/default/objects/PR_Header__c/fields/Assigned_To_Me__c.field-meta.xml
<CustomField>
        <fullName>Assigned_To_Me__c</fullName>
        <formula>Finance_Reviewer__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Me?</label>
        <type>Checkbox</type>
    </CustomField>