SFUSA/force-app/main/default/objects/PR_Header__c/fields/Attachments_Sent_to_SAP__c.field-meta.xml
<CustomField>
        <fullName>Attachments_Sent_to_SAP__c</fullName>
        <description>Here we capture the Attachment ids that are successfully sent to SAP</description>
        <label>Attachments Sent to SAP</label>
        <type>TextArea</type>
    </CustomField>