SFUSA/force-app/main/default/objects/PR_Header__c/fields/Date_Time_Approval_Submission__c.field-meta.xml
<CustomField>
        <fullName>Date_Time_Approval_Submission__c</fullName>
        <label>Date/Time Approval Submission</label>
        <type>DateTime</type>
    </CustomField>