SFUSA/force-app/main/default/objects/PR_Header__c/fields/Date_Time_Finance_Approved__c.field-meta.xml
<CustomField>
        <fullName>Date_Time_Finance_Approved__c</fullName>
        <label>Date/Time Finance Approved</label>
        <type>DateTime</type>
    </CustomField>