SFUSA/force-app/main/default/objects/PR_Header__c/fields/Finance_Approved__c.field-meta.xml
<CustomField>
        <fullName>Finance_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Approved</label>
        <type>Checkbox</type>
    </CustomField>