SFUSA/force-app/main/default/objects/PR_Header__c/fields/Finance_Notes__c.field-meta.xml
<CustomField>
        <fullName>Finance_Notes__c</fullName>
        <label>Finance Notes</label>
        <type>TextArea</type>
    </CustomField>