SFUSA/force-app/main/default/objects/PR_Header__c/fields/Finance_Rejected__c.field-meta.xml
<CustomField>
        <fullName>Finance_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Rejected</label>
        <type>Checkbox</type>
    </CustomField>