SFUSA/force-app/main/default/objects/PR_Header__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Terms</fullName>
                    <default>true</default>
                    <label>Standard Terms</label>
                </value>
                <value>
                    <fullName>Net 5 Terms</fullName>
                </value>
                <value>
                    <fullName>Net 5 Days</fullName>
                    <isActive>false</isActive>
                    <label>Net 5 Days</label>
                </value>
                <value>
                    <fullName>Net 60 Days</fullName>
                    <isActive>false</isActive>
                    <label>Net 60 Days</label>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <isActive>false</isActive>
                    <label>Standard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>