SFUSA/force-app/main/default/objects/PR_Header__c/fields/PR_Details_Approved_By_Finance__c.field-meta.xml
<CustomField>
        <fullName>PR_Details_Approved_By_Finance__c</fullName>
        <description>To show if there any PR Details are rejected</description>
        <label>PR Details Approved By Finance?</label>
        <summaryFilterItems>
            <field>PR_Detail__c.Approved__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>PR_Detail__c.PR_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>