SFUSA/force-app/main/default/objects/PR_Header__c/fields/Procurement_Rejected__c.field-meta.xml
<CustomField>
        <fullName>Procurement_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procurement Rejected</label>
        <type>Checkbox</type>
    </CustomField>