SFUSA/force-app/main/default/objects/PR_Header__c/fields/SAP_Company_Code_Value__c.field-meta.xml
<CustomField>
        <fullName>SAP_Company_Code_Value__c</fullName>
        <formula>SAP_Company_Code__r.Name</formula>
        <label>SAP Company Code Value</label>
        <type>Text</type>
    </CustomField>