SFUSA/force-app/main/default/objects/PR_Header__c/fields/SAP_PR_Number__c.field-meta.xml
<CustomField>
        <fullName>SAP_PR_Number__c</fullName>
        <label>SAP PR Number</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>