SFUSA/force-app/main/default/objects/PR_Header__c/fields/Total_PR_Amount__c.field-meta.xml
<CustomField>
        <fullName>Total_PR_Amount__c</fullName>
        <description>Roll up of all PR Details Amount</description>
        <inlineHelpText>Sum of PR Amount</inlineHelpText>
        <label>Total PR Amount</label>
        <summarizedField>PR_Detail__c.PR_Amount__c</summarizedField>
        <summaryForeignKey>PR_Detail__c.PR_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>