SFUSA/force-app/main/default/objects/PR_Header__c/fields/User_Authorized_To_Submit_PR__c.field-meta.xml
<CustomField>
        <fullName>User_Authorized_To_Submit_PR__c</fullName>
        <formula>OwnerId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Authorized To Submit PR?</label>
        <type>Checkbox</type>
    </CustomField>