SFUSA/force-app/main/default/objects/PR_Header__c/fields/Vendor_Address__c.field-meta.xml
<CustomField>
        <fullName>Vendor_Address__c</fullName>
        <formula>If(LEN(Vendor_Name__r.BillingStreet)&gt;0, Vendor_Name__r.BillingStreet&amp; " " , "" ) &amp; BR() &amp;
If(LEN(Vendor_Name__r.BillingCity)&gt;0, Vendor_Name__r.BillingCity&amp; ", " , "" )&amp;
If(LEN(Vendor_Name__r.BillingState)&gt;0, Vendor_Name__r.BillingState&amp; " " , "" )&amp;
If(LEN(Vendor_Name__r.BillingPostalCode)&gt;0, Vendor_Name__r.BillingPostalCode,"") &amp; BR() &amp;
If(LEN( Vendor_Name__r.BillingCountry) &gt;0, Vendor_Name__r.BillingCountry,"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Address</label>
        <type>Text</type>
    </CustomField>