SFUSA/force-app/main/default/objects/PR_Header__c/fields/Vendor_State__c.field-meta.xml
<CustomField>
        <fullName>Vendor_State__c</fullName>
        <formula>Vendor_Name__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor State</label>
        <type>Text</type>
    </CustomField>