SFUSA/force-app/main/default/objects/PR_Header__c/recordTypes/Approved.recordType-meta.xml
<RecordType>
        <fullName>Approved</fullName>
        <active>true</active>
        <description>Approved PR Record-View Only</description>
        <label>Approved</label>
    </RecordType>