SFUSA/force-app/main/default/objects/PR_Header__c/recordTypes/Canceled.recordType-meta.xml
<RecordType>
        <fullName>Canceled</fullName>
        <active>true</active>
        <label>Canceled</label>
    </RecordType>