SFUSA/force-app/main/default/objects/PR_Header__c/recordTypes/Completed.recordType-meta.xml
<RecordType>
        <fullName>Completed</fullName>
        <active>true</active>
        <description>Sent To SAP and Completed</description>
        <label>Completed</label>
    </RecordType>