SFUSA/force-app/main/default/objects/PR_Header__c/recordTypes/PR_US.recordType-meta.xml
<RecordType>
        <fullName>PR_US</fullName>
        <active>true</active>
        <label>PR US</label>
    </RecordType>