SFUSA/force-app/main/default/objects/PR_Header__c/validationRules/Campaign_Spend_Count_Validation.validationRule-meta.xml
<ValidationRule>
        <fullName>Campaign_Spend_Count_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Campaign_Spend_Count__c!=Phasing_Count__c, TEXT(Status__c)='Approved By Finance')</errorConditionFormula>
        <errorMessage>You can not approve this record. Campaign Spend records not exist for phasing.</errorMessage>
    </ValidationRule>