SFUSA/force-app/main/default/objects/PR_Header__c/listViews/X5_Approved_by_Finance.listView-meta.xml
<ListView>
        <fullName>X5_Approved_by_Finance</fullName>
        <columns>NAME</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Finance_Reviewer__c</columns>
        <columns>Status__c</columns>
        <columns>Payment_Terms__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Total_PR_Amount__c</columns>
        <columns>SAP_Company_Code__c</columns>
        <columns>SAP_PR_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved By Finance</value>
        </filters>
        <label>5. Approved by Finance</label>
        <language>en_US</language>
    </ListView>